# libComInterfaceGenerator

./: .gitignore  CMakeLists.txt  FetchAndBuildANTLR.ps1  GenerateParserSources.ps1  README.md
Grammar/: Cidl.g4
Src/: CMakeLists.txt  TypeCache.cpp
Src/Generator/: CodeFile.h  Generator.h
Src/Generator/CSharp/: CSharpCodeFile.h
Src/Generator/Cpp/: CppCodeFile.h  CppInterfaceSerializerCodeFile.h  CppIoStreamDescriptorCodeFile.h  CppTaskCodeFile.h
Src/Type/: Module.h
